Finalized Contact Cards

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
-                        <a href="https://github.com/Frosty204">GitHub</a>
+                        <a href="https://github.com/TannerAssenmacher">GitHub</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/img-1.jpg">
+                <img class="card__img__top" src="./images/Austin.jpg">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Austin Frost</h3>
                     <!-- <div class="card__text">
@@ -226,7 +226,7 @@
                     </div> -->
                     <div class="card__text">
                         <i class="fa fa-github" style="color: rgb(255, 255, 255); font-size: 2rem; border-radius: 50%;"></i>
-                        <a href="#section__contact">GitHub</a>
+                        <a href="https://github.com/Frosty204">GitHub</a>
                     </div>
                     <div class="card__text">
                         <i class="fa fa-envelope" style="color: rgb(255, 255, 255); font-size: 1.5rem;"></i>
