Added Logo to Landing Page

--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -27,7 +27,10 @@
 <body>
     <!--  ---------------------  Above: Navbar Container --------------------- -->
     <header class="header">
-        <a class="logo">WeConnect</a>
+        <div class="logo">
+            <img class="weconnect__logo" src="./images/logo.png" alt="WeConnect Logo">
+            <a>WeConnect</a>
+        </div>
 
         <input type="checkbox" id="check">
 
