Meta Descriptions and Alt Text

--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Login and signup page for the WeConnect contact manager. Connect with friends and family across the universe.">
     <title>New Login/ Sign Up</title>
     <link rel="stylesheet" href = "./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +13,7 @@
 
 <body>
     <div class="overlay">
-        <img src="./images/logo.png" loading="lazy">
+        <img src="./images/logo.png" loading="lazy" alt="The WeConnect logo of a diamond with four dots on each side.">
     </div>
     
     <div class="brand__name" id="brand__name">WeConnect</div>
