--- a/Group8ContactProject/landingPage.html
+++ b/Group8ContactProject/landingPage.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Home page for the space themed WeConnect contact manager. Manage connections with even the most distant of companions.">
     <link rel="stylesheet" href="./css/landingPage.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +29,7 @@
     <!--  ---------------------  Above: Navbar Container --------------------- -->
     <header class="header">
         <div class="logo">
-            <img class="weconnect__logo" src="./images/logo.png" alt="WeConnect Logo">
+            <img class="weconnect__logo" src="./images/logo.png" alt="The WeConnect logo of a diamond with four dots on each side.">
             <a>WeConnect</a>
         </div>
 
@@ -99,28 +100,28 @@
             <i id="left" class="fa-solid fa-angle-left"></i>
             <ul class="carousel">
                 <li class="card">
-                    <div class="img"><img src="./images/img-1.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="./images/img-1.jpg" alt="Placeholder image of a cat representing the developer Tanner Assenmacher, it is wearing a black headscarf and vintage round glasses." draggable="false"></div>
                     <h2>Tanner Assenmacher</h2>
                     <span>Database Manager</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="./images/img-2.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="./images/img-2.jpg" alt="Placeholder image of a cat representing the developer Kimsrun Lim, it is wearing shades." draggable="false"></div>
                     <h2>Kimsrun Lim</h2>
                     <span>Front-End Developer</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="./images/img-3.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="./images/img-3.jpg" alt="Placeholder image of a cat representing the developer Evan Pilling, it is giving a smirk." draggable="false"></div>
                     <h2>Evan Pilling</h2>
                     <span>Project Manager</span>
                     <span>API Manager</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="./images/img-4.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="./images/img-4.jpg" alt="Placeholder image of a cat representing the developer Luka Telebak, it is winking." draggable="false"></div>
                     <h2>Luka Telebak</h2>
                     <span>Front-End Developer</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="./images/img-5.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="./images/img-5.jpg" alt="Placeholder image of a cat representing the developer Austin Frost, it is giving a derpy face." draggable="false"></div>
                     <h2>Austin Frost</h2>
                     <span>API Manager</span>
                 </li>
@@ -135,7 +136,7 @@
     <div class="contact__page" id="section__contact">
         <div class="card-group">
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/tanner.jpg">
+                <img class="card__img__top" src="./images/tanner.jpg" alt="The developer Taner Assenmacher.">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Tanner Assenmacher</h3>
                     <div class="card__text">
@@ -156,7 +157,7 @@
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/kimsrun.jpg">
+                <img class="card__img__top" src="./images/kimsrun.jpg" alt="The developer Kimsrun Lim.">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Kimsrun Lim</h3>
                     <div class="card__text">
@@ -177,7 +178,7 @@
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/evan.jpeg">
+                <img class="card__img__top" src="./images/evan.jpeg" alt="The developer Evan Pilling.">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Evan Pilling</h3>
                     <div class="card__text">
@@ -198,7 +199,7 @@
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/luka.jpg">
+                <img class="card__img__top" src="./images/luka.jpg" alt="The developer Luka Telebak.">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Luka Telebak</h3>
                     <!-- <div class="card__text">
@@ -219,7 +220,7 @@
                 </div>
             </div>
             <div class="card" id="contact__card">
-                <img class="card__img__top" src="./images/Austin.jpg">
+                <img class="card__img__top" src="./images/Austin.jpg" alt="The developer Austin Frost.">
                 <div class="card-body">
                     <h3 class="card-title" style="color: rgb(255, 255, 255);">Austin Frost</h3>
                     <!-- <div class="card__text">
@@ -247,7 +248,7 @@
     <!--  -------------------------- Below: Pop Ups -------------------------- -->
     <div class="pop_container">
         <div class="add__popup" id="add__popup">
-            <img src="./images/add.png">
+            <img src="./images/add.png" alt="A plus sign.">
             <h2>Add New Contact</h2>
             <div class="add__first__name">
                 <div class="input__container">
@@ -294,7 +295,7 @@
         </div>
 
         <div class="edit__popup" id="edit__popup">
-            <img src="./images/edit.png">
+            <img src="./images/edit.png" alt="A stylized notebook and pen.">
             <h2>Edit Contact</h2>
             <div class="edit__first__name">
                 <div class="input__container">
@@ -341,7 +342,7 @@
         </div>
 
         <div class="delete__popup" id="delete__popup">
-            <img src="./images/delete.png">
+            <img src="./images/delete.png" alt="An exclamation mark.">
             <h2>Delete Contact</h2>
             <p>Are you sure you want to delete this contact?</p>
             <div class="delete__contact__buttons">
