--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -91,6 +91,10 @@
         </form>
     </div>
     
+    <div class="easter__egg">
+        <img src="./images/Laser_Shark.gif">
+    </div>
+
     <script src = "./js/main.js"></script>
 </body>
 </html>
