--- a/Group8ContactProject/index.html
+++ b/Group8ContactProject/index.html
@@ -91,7 +91,7 @@
         </form>
     </div>
     
-    <div class="easter__egg">
+    <div class="easter__egg" id="easter__shark">
         <img src="./images/Laser_Shark.gif">
     </div>
 
